--- a/MarketCountdownApp/DarkTheme.xaml
+++ b/MarketCountdownApp/DarkTheme.xaml
@@ -1,6 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <!-- white icons in dark -->
+    <SolidColorBrush x:Key="IconFillBrush" Color="White"/>
     <!-- overall window background (very dark charcoal) -->
     <SolidColorBrush x:Key="WindowBackgroundBrush" Color="#1B1B1F"/>
 
