--- a/MarketCountdownApp/MainWindow.xaml
+++ b/MarketCountdownApp/MainWindow.xaml
@@ -4,6 +4,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:MarketCountdownApp"
+    xmlns:settings="clr-namespace:MarketCountdownApp.Properties"
     Title="Market Countdown"
     WindowStyle="None"
     ResizeMode="NoResize"
@@ -853,7 +854,7 @@
                           Margin="0,8,0,0"/>
                             <!-- add your own toggles/sliders here -->
                             <TextBlock Text="Show Currency Pairs" FontWeight="SemiBold" Margin="0,8,0,4"/>
-                            <UniformGrid Columns="2" Margin="0,0,0,12">
+                            <UniformGrid Columns="2" Margin="0,0,0,12" DataContext="{x:Static settings:Settings.Default}">
                                 <CheckBox x:Name="AUDCheck" Content="AUD" IsChecked="{Binding ShowAUD,Mode=TwoWay}"/>
                                 <CheckBox x:Name="CADCheck" Content="CAD" IsChecked="{Binding ShowCAD,Mode=TwoWay}"/>
                                 <CheckBox x:Name="CHFCheck" Content="CHF" IsChecked="{Binding ShowCHF,Mode=TwoWay}"/>
