--- a/MarketCountdownApp/MainWindow.xaml
+++ b/MarketCountdownApp/MainWindow.xaml
@@ -4,7 +4,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:MarketCountdownApp"
-    xmlns:settings="clr-namespace:MarketCountdownApp.Properties"
+    xmlns:settings="clr-namespace:MarketCountdownApp.Properties;assembly=MarketCountdownApp"
     Title="Market Countdown"
     WindowStyle="None"
     ResizeMode="NoResize"
