--- a/MarketCountdownApp/App.xaml
+++ b/MarketCountdownApp/App.xaml
@@ -3,11 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <!-- default to light -->
-                <ResourceDictionary Source="LightTheme.xaml"/>
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </Application.Resources>
+    <ResourceDictionary>
+        <ResourceDictionary.MergedDictionaries>
+            <ResourceDictionary Source="Style.xaml"/>
+            <ResourceDictionary Source="Font.xaml"/>
+            <ResourceDictionary Source="Images.xaml"/>
+            <!-- default to light -->
+            <ResourceDictionary Source="LightTheme.xaml"/>
+        </ResourceDictionary.MergedDictionaries>
+    </ResourceDictionary>
+</Application.Resources>
 </Application>
