--- a/MarketCountdownApp/MainWindow.xaml
+++ b/MarketCountdownApp/MainWindow.xaml
@@ -4,8 +4,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:MarketCountdownApp"
-    xmlns:settings="clr-namespace:MarketCountdownApp.Properties;assembly=MarketCountdownApp"
-    xmlns:prop="clr-namespace:MarketCountdownApp.Properties"
     Title="Market Countdown"
     WindowStyle="None"
     ResizeMode="NoResize"
@@ -25,8 +23,7 @@
     <Window.Resources>
         <!-- Converters & ViewModel -->
         <local:StatusToBrushConverter x:Key="StatusToBrushConverter"/>
-        <local:ProgressToArcConverter x:Key="ProgressToArcConverter"/>
-        <local:ImpactToBrushConverter x:Key="ImpactToBrushConverter"/>
+                <local:ImpactToBrushConverter x:Key="ImpactToBrushConverter"/>
         <local:MainWindowViewModel      x:Key="ViewModel"/>
         <local:IconSourceConverter x:Key="IconSourceConverter"/>
         <BooleanToVisibilityConverter x:Key="BoolToVis"/>
@@ -267,13 +264,14 @@
                 <!-- London Tile -->
                 <Border Background="{DynamicResource CardBackgroundBrush}"
                 CornerRadius="12"
-                Margin="4">
+                Margin="4"
+                Padding="8">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="60"/>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="50"/>
-                            <ColumnDefinition Width="60"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
 
                         <!-- Icon -->
@@ -302,25 +300,24 @@
                        Text="{Binding LondonLocalTime}"
                        Style="{StaticResource LocalTimeStyle}"
                        HorizontalAlignment="Center"
-                       Margin="12,10,8,0"
+                       Margin="10,0,10,0"
                        VerticalAlignment="Top"/>
 
                         <!-- Status dial -->
-                        <Grid Grid.Column="3"
-                  Width="60" Height="60"
-                  Margin="-20,0,0,0"
-                  VerticalAlignment="Center">
-                            <Ellipse Stroke="{Binding LondonStatus, Converter={StaticResource StatusToBrushConverter}}"
-                       StrokeThickness="6"/>
-                            <Path   Stroke="{Binding LondonStatus, Converter={StaticResource StatusToBrushConverter}}"
-                      StrokeThickness="6"
-                      Data="{Binding LondonProgress, Converter={StaticResource ProgressToArcConverter}}"/>
+                        <Grid Grid.Column="3" Width="60" Height="60" VerticalAlignment="Center" 
+                              HorizontalAlignment="Center"
+                              Margin="-20,0,6,0">
+                            <local:CircularProgressBar_UC
+                                Width="60" Height="60"
+                                Minimum="0" Maximum="1"
+                                Value="{Binding LondonProgress}"
+                                Stroke="{Binding LondonStatus, Converter={StaticResource StatusToBrushConverter}}"
+                                StrokeThickness="6"/>
                             <TextBlock Text="{Binding LondonStatus}"
-                         FontSize="10"
-                         FontWeight="Bold"
-                         Foreground="{DynamicResource PrimaryTextBrush}"
-                         HorizontalAlignment="Center"
-                         VerticalAlignment="Center"/>
+                                       FontSize="10" FontWeight="Bold"
+                                       Foreground="{DynamicResource PrimaryTextBrush}"
+                                       HorizontalAlignment="Center"
+                                       VerticalAlignment="Center"/>
                         </Grid>
                         <!-- glowing dot -->
                         <Grid Grid.Column="0"
@@ -406,23 +403,18 @@
         HorizontalAlignment="Center"
         Margin="12,10,8,0"
         VerticalAlignment="Top"/>
-                        <Grid Grid.Column="3"
-   Width="60" Height="60"
-   HorizontalAlignment="Center"
-   Margin="-20,0,0,0"
-   VerticalAlignment="Center">
-                            <Ellipse 
-                 Stroke="{Binding NewYorkStatus, Converter={StaticResource StatusToBrushConverter}}"
-                 StrokeThickness="6"/>
-                            <Path   Stroke="{Binding NewYorkStatus, Converter={StaticResource StatusToBrushConverter}}"
-       StrokeThickness="6"
-       Data="{Binding NewYorkProgress, Converter={StaticResource ProgressToArcConverter}}"/>
+                        <Grid Grid.Column="3" Width="60" Height="60" VerticalAlignment="Center">
+                            <local:CircularProgressBar_UC
+                                Width="60" Height="60"
+                                Minimum="0" Maximum="1"
+                                Value="{Binding NewYorkProgress}"
+                                Stroke="{Binding NewYorkStatus, Converter={StaticResource StatusToBrushConverter}}"
+                                StrokeThickness="6"/>
                             <TextBlock Text="{Binding NewYorkStatus}"
-          FontSize="10"
-          FontWeight="Bold"
-          Foreground="{DynamicResource PrimaryTextBrush}"
-          HorizontalAlignment="Center"
-          VerticalAlignment="Center"/>
+                                       FontSize="10" FontWeight="Bold"
+                                       Foreground="{DynamicResource PrimaryTextBrush}"
+                                       HorizontalAlignment="Center"
+                                       VerticalAlignment="Center"/>
                         </Grid>
                         <Grid Grid.Column="0"
    Width="20" Height="20"
@@ -505,23 +497,18 @@
         HorizontalAlignment="Center"
         Margin="12,10,8,0"
         VerticalAlignment="Top"/>
-                        <Grid Grid.Column="3"
-   Width="60" Height="60"
-   HorizontalAlignment="Center"
-   Margin="-20,0,0,0"
-   VerticalAlignment="Center">
-                            <Ellipse 
-                 Stroke="{Binding SydneyStatus, Converter={StaticResource StatusToBrushConverter}}"
-                 StrokeThickness="6"/>
-                            <Path   Stroke="{Binding SydneyStatus, Converter={StaticResource StatusToBrushConverter}}"
-       StrokeThickness="6"
-       Data="{Binding SydneyProgress, Converter={StaticResource ProgressToArcConverter}}"/>
+                        <Grid Grid.Column="3" Width="60" Height="60" VerticalAlignment="Center">
+                            <local:CircularProgressBar_UC
+                                Width="60" Height="60"
+                                Minimum="0" Maximum="1"
+                                Value="{Binding SydneyProgress}"
+                                Stroke="{Binding SydneyStatus, Converter={StaticResource StatusToBrushConverter}}"
+                                StrokeThickness="6"/>
                             <TextBlock Text="{Binding SydneyStatus}"
-          FontSize="10"
-          FontWeight="Bold"
-          Foreground="{DynamicResource PrimaryTextBrush}"
-          HorizontalAlignment="Center"
-          VerticalAlignment="Center"/>
+                                       FontSize="10" FontWeight="Bold"
+                                       Foreground="{DynamicResource PrimaryTextBrush}"
+                                       HorizontalAlignment="Center"
+                                       VerticalAlignment="Center"/>
                         </Grid>
                         <Grid Grid.Column="0"
    Width="20" Height="20"
@@ -604,23 +591,18 @@
         HorizontalAlignment="Center"
         Margin="12,10,8,0"
         VerticalAlignment="Top"/>
-                        <Grid Grid.Column="3"
-   Width="60" Height="60"
-   HorizontalAlignment="Center"
-   Margin="-20,0,0,0"
-   VerticalAlignment="Center">
-                            <Ellipse 
-                 Stroke="{Binding TokyoStatus, Converter={StaticResource StatusToBrushConverter}}"
-                 StrokeThickness="6"/>
-                            <Path   Stroke="{Binding TokyoStatus, Converter={StaticResource StatusToBrushConverter}}"
-       StrokeThickness="6"
-       Data="{Binding TokyoProgress, Converter={StaticResource ProgressToArcConverter}}"/>
+                        <Grid Grid.Column="3" Width="60" Height="60" VerticalAlignment="Center">
+                            <local:CircularProgressBar_UC
+                                Width="60" Height="60"
+                                Minimum="0" Maximum="1"
+                                Value="{Binding TokyoProgress}"
+                                Stroke="{Binding TokyoStatus, Converter={StaticResource StatusToBrushConverter}}"
+                                StrokeThickness="6"/>
                             <TextBlock Text="{Binding TokyoStatus}"
-          FontSize="10"
-          FontWeight="Bold"
-          Foreground="{DynamicResource PrimaryTextBrush}"
-          HorizontalAlignment="Center"
-          VerticalAlignment="Center"/>
+                                       FontSize="10" FontWeight="Bold"
+                                       Foreground="{DynamicResource PrimaryTextBrush}"
+                                       HorizontalAlignment="Center"
+                                       VerticalAlignment="Center"/>
                         </Grid>
                         <Grid Grid.Column="0"
    Width="20" Height="20"
@@ -855,7 +837,7 @@
                           Margin="0,8,0,0"/>
                             <!-- add your own toggles/sliders here -->
                             <TextBlock Text="Show Currency Pairs" FontWeight="SemiBold" Margin="0,8,0,4"/>
-                            <UniformGrid Columns="2" Margin="0,0,0,12" DataContext="{x:Static prop:Settings.Default}">
+                            <UniformGrid Columns="2" Margin="0,0,0,12">
                                 <CheckBox x:Name="AUDCheck" Content="AUD" IsChecked="{Binding ShowAUD,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                                 <CheckBox x:Name="CADCheck" Content="CAD" IsChecked="{Binding ShowCAD,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                                 <CheckBox x:Name="CHFCheck" Content="CHF" IsChecked="{Binding ShowCHF,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
